[tool.poetry]
name = "ada_hotel"
version = "0.1.0"
description = ""
authors = ["naayem <vincentnaayem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
flake8 = "^3.8.4"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
pandas = "^1.1.5"
pytrends = "^4.7.3"
ipykernel = "^5.3.4"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
